ext_config/cancunf: enable the PCPU erofs performance
Android GKI android12-5.10-2022-12_r8 integrate percpu high priority
kthread for Erofs which will enhance erofs performance.
Enable it on both userdebug and user version(gki_defconfig enables it
by default)

Change-Id: I8833d426332b7f251795eed14ab17951fee7ec18
Reviewed-on: https://gerrit.mot.com/2586701
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -133,3 +133,7 @@ CONFIG_MOTO_JP_TYPECOTP_SUPPORT=y
 #disable prot since prot-region-base-size = <0 0> in mt6855.dts
 # CONFIG_MTK_PROT_MEM_SUPPORT is not set
 
+#enable the PCPU erofs performance, depends on GKI android12-5.10-2022-12_r8 or later
+CONFIG_EROFS_FS_PCPU_KTHREAD=y
+CONFIG_EROFS_FS_PCPU_KTHREAD_HIPRI=y
+
