[charge][Cancun 5G]guage car and zcv update
Change-Id: Iab3001b705c60930b90b3badcf8c5aabbcf9f8d0
note:
1:update car value
2:update battery zcv
Reviewed-on: https://gerrit.mot.com/2590831
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: liujian <liujian24@mt.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cancunf-charger-india-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-charger-india-overlay.dtsi
@@ -274,6 +274,7 @@
 	ACTIVE_TABLE = <(5)>;
 	R_FG_VALUE = <(5)>;
 	NO_BAT_TEMP_COMPENSATE = <(1)>;
+	CAR_TUNE_VALUE = <(99)>;
 //	df-serialnum = "SB18D61156";
 	df-serialnum = "SB18D86478";
 	#include "bat_setting/mt6855_battery_pc50_atl_5000mah.dtsi"
