kernel:fsa4480 sens connect to gnd
add fsa4480 sens connect to gnd config.
manaus product audio hardware design as this case.

Change-Id: I8e4770e1a4e17f751edab900ce947a8b31d39f0e
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2592239
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -2111,3 +2111,9 @@ config DUMMY_SND_CARD_SUPPORT
 	default n
 	help
 	Enable it only for not smart pa on board.
+
+config FSA4480_SENS_TO_GND
+	bool "fsa4480 sens connect to gnd"
+	default n
+	help
+	Enable it only for fsa4480 sens connect to gnd.
