--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
@@ -58,6 +58,7 @@ CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_manaus_ov50a_mipi_raw mot_manaus_ov32b_mipi_
 CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_AW_RAMPING_SUPPORT=y
 CONFIG_DUMMY_SND_CARD_SUPPORT=y
+CONFIG_FSA4480_SENS_TO_GND=y
 CONFIG_SND_I2S1=y
 CONFIG_TYPEC_FSA4480=m
 CONFIG_MOTO_WLC_ALG_SUPPORT=m
