--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -968,6 +968,16 @@ config DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ
 	  Say Y here if you want to enable support for DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
 
+config DRM_PANEL_CSOT_FT8725_650_FHDP_DPHY_VDO_120HZ
+	tristate "CSOT 1080*2400 120 HZ VDO ft8725 panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	default n
+	help
+	  Say Y here if you want to enable support for DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ
+	  panel. It provides a MIPI DSI interface to host.
+
 config DRM_PANEL_TXD_ILI7807S_650_FHDP_DPHY_VDO_120HZ
         tristate "TXD 1080*2400 120 HZ VDO ili7807s panel"
         depends on OF
