--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -99,6 +99,7 @@ obj-$(CONFIG_DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tm-
 obj-$(CONFIG_DRM_PANEL_TIANMA_NT36672C_649_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tianma-nt36672c-649-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_VTDR6115_655_FHDP_DPHY_VDO_144HZ) += dsi-panel-mot-tianma-vtdr6115-655-fhdp-dphy-vdo-144hz.o
 obj-$(CONFIG_DRM_PANEL_CSOT_VTDR6115_655_FHDP_DPHY_VDO_144HZ) += dsi-panel-mot-csot-vtdr6115-655-fhdp-dphy-vdo-144hz.o
+obj-$(CONFIG_DRM_PANEL_CSOT_FT8725_650_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-csot-ft8725-650-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_CSOT_FT8726_650_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-csot-ft8726-650-fhdp-dphy-vdo-120hz.o
 obj-$(CONFIG_DRM_PANEL_TXD_ILI7807S_650_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-txd-ili7807s-650-fhdp-dphy-vdo-120hz.o
 
