kernel/dts: cancunf add new 3rd csot panel configs
cancunf:
add new 3rd csot ft8725 panel configs

Change-Id: I0764b9d1157a79dda8cfec72be6c45ceb2fdefd1
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2595756
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
@@ -186,7 +186,7 @@
 	};
 
 	panel3@0 {
-                compatible = "csot_ft8726,vid,120hz";
+                compatible = "txd,ili7807s,vdo,120hz";
                 reg = <2>;
                 reset-gpios = <&pio 95 0>;
                 bias_n-gpios = <&pio 134 0>;
@@ -201,7 +201,7 @@
         };
 
 	panel4@0 {
-                compatible = "txd,ili7807s,vdo,120hz";
+                compatible = "csot_ft8725,vid,120hz";
                 reg = <3>;
                 reset-gpios = <&pio 95 0>;
                 bias_n-gpios = <&pio 134 0>;
@@ -209,6 +209,21 @@
                 pinctrl-names = "default";
                 port {
                         panel_in4: endpoint {
+                                remote-endpoint = <&dsi_out>;
+                        };
+                };
+
+        };
+
+	panel5@0 {
+                compatible = "csot_ft8726,vid,120hz";
+                reg = <4>;
+                reset-gpios = <&pio 95 0>;
+                bias_n-gpios = <&pio 134 0>;
+                bias_p-gpios = <&pio 182 0>;
+                pinctrl-names = "default";
+                port {
+                        panel_in5: endpoint {
                                 remote-endpoint = <&dsi_out>;
                         };
                 };
