dtsi:manaus/sensor: awinic params update
  1.update sar params
  2.mt6879-moto-common-overlay.dtsi
  3.mt6879-manaus-evb-overlay.dtsi

Change-Id: Id6c16006808e91d29052b193c61a6679b35ce463
Signed-off-by: weimh1@motorola.com <weimh1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2597445
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-manaus-evb-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879-manaus-evb-overlay.dts
@@ -26,6 +26,11 @@
 	};
 };
 
+&awinic_sar {
+	channel_use_flag = <0x1f>;
+	platform_state = "evt";
+};
+
 #include <manaus_evb/cust.dtsi>
 #include "mediatek/cust_mt6879_camera_v4l2_manaus.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
