--- a/arch/arm64/boot/dts/mediatek/bat_setting/mt6855_battery_pc50_atl_5000mah.dtsi
+++ b/arch/arm64/boot/dts/mediatek/bat_setting/mt6855_battery_pc50_atl_5000mah.dtsi
@@ -10,6 +10,8 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  * See http://www.gnu.org/licenses/gpl-2.0.html for more details.
  */
+serialnum_0 = "SB18D86478";
+
 battery0_profile_t0_num = <100>;
 battery0_profile_t0_col = <3>;
 battery0_profile_t0 =
