arm64/dts: change mode for long pressing powerkey
change long pressing reset from power key to  home key + power key for
debug and trace power key

Change-Id: Iead984c8b43ec14962da791b667f0b0bd65936c7
Signed-off-by: Franz Wang <wangxf14@motorola.com>
Reviewed-on: https://gerrit.mot.com/2599117
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -685,10 +685,11 @@
 };
 
 /* long powerkey reset setting */
-
+/* MMI_STOPSHIP <BOOTLOADER>: change long pressing reset from power key to home key + power key */
 &spmi {
 	main_pmic: pmic@4 {
 		mt6363keys: mt6363keys {
+			mediatek,long-press-mode = <2>;
 			power-off-time-sec = <1>;
 		};
 	};
