modify VBB_UVLO from 2.6V to 2.9V
modify VBB_UVLO from 2.6V to 2.9V
for POFFSTST0 0x8800 abnormal shutdown issue debug

This patch need to be reverted later.

Change-Id: Ic0288cc90f2ae755721cc7604a8fcbbd63924993
Signed-off-by: Haijian Ma <mahj8@motorola.com>
Reviewed-on: https://gerrit.mot.com/2599121
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Xiaofeng Wang <wangxf14@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -14,6 +14,10 @@
 #include <dt-bindings/iio/adc/mediatek,mt6375_adc.h>
 #include <dt-bindings/iio/mt635x-auxadc.h>
 
+&mt6363_dynamic_loading_throttling {
+	vbb-uvlo-level = <2900>;
+};
+
 &mt6375_typec {
        tcpc,en_wd;
        tcpc,en_wd_sbu_polling;
