--- a/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-manaus-common-overlay.dtsi
@@ -864,34 +864,34 @@
 };
 
 &sx937x {
-	Semtech,button-flag = <0x1f>;
+	Semtech,button-flag = <0x07>;
 	Semtech,reg-num = <52>;
 	Semtech,reg-init = <
 		0x8024  0x7F00
 		0x4004  0x70
 		0x4008  0x8
 		0x8020  0x32
-		0x8028  0x85E
+		0x8028  0x866
 		0x8034  0x85E
-		0x8040  0x85E
-		0x804C  0x85E
-		0x8058  0x85E
+		0x8040  0x67E
+		0x804C  0x68E
+		0x8058  0x45E
 		0x8064  0x85E
 		0x8070  0x85E
 		0x807C  0x85E
 		0x8030  0xFFF9FD
 		0x803C  0xFFD9FF
-		0x8048  0xFEF9FF
-		0x8054  0xF7F9FF
-		0x8060  0xBFF9FF
+		0x8048  0xF7F9FF
+		0x8054  0xFFF9FF
+		0x8060  0xFFF9FF
 		0x806C  0xFFF9EF
 		0x8078  0xFFF97F
-		0x8084  0xFFF9FF
-		0x8098  0x5A40
-		0x80B8  0x5A40
-		0x80D8  0x5A5A
-		0x80F8  0x5A5A
-		0x8118  0x5A5A
+		0x8084  0xBFF9FF
+		0x8098  0x4E3D
+		0x80B8  0x4E36
+		0x80D8  0x2C2C
+		0x80F8  0x3838
+		0x8118  0x2C2C
 		0x8138  0x5A40
 		0x8158  0x5A40
 		0x8178  0x5A40
